# FitzCore

./: CMakeLists.txt  README.md  conanfile.txt
script/: startCore.bat
src/: main.cpp
zmq/: zhelpers.hpp  zmq.hpp
